Version 1.1.3 -- DEVELOPMENT
----------------------------
- Fixed MOTD
- Fixed multipart/alternative messages
- Updated Dutch translation
- Added Indonesian translation
- Added Portuguese (Portugal) translation
- Added language aliasing

Version 1.1.2 -- May 21, 2001 
-----------------------------
- Many bugs squashed
- Several UI tweaks and improvements
- Added option (3 -> 14 in conf.pl) to auto create sent and trash folders.
- Updated Czech translation
- Support for multiple identities
- Support for Russian Apache removed. It is now deemed easier to just turn 
  off Charset Recoding in the Russian Apache config. See doc/README.russian_apache

Version 1.1.1 -- April 30, 2001
-------------------------------
- Added built-in support for gettext if compiled support isn't available
- Made validate.php include a few more standard things
- Corrected a bug when sending an email properly

Version 1.1.0 -- April 21, 2000 
-------------------------------
- Added option to have signout page redirect to another page (patch from Scott Bronson)
    This can be configured in conf.pl (Org Prefs)
- Much improved SMTP error handling (patch from Jeff Evans)
- Preferences are now cached instead of read in every page load.
- Improved URL parser
- Added ability to read HTML messages by default instead of plain text (Display Options)
- Added authenticated SMTP server support (configure in conf.pl)
- Rewrote attachment handling code in compose.php
- If aliases are typed in To, Cc, or Bcc, they are automatically looked up in
    in the addressbook and converted to the associated addresses.
- Added collapseable folder listing (an option that can be turned on in Folder Options)
- Added alternating row colors to improve interface (Display Options)



Version 1.0.6 -- April 19, 2001
-------------------------------
- Reworked validation for each page.  It's now standardized in validate.php
- Fixed login bug that resulted from 1.0.5 security updates